# morphkit

./: Cargo.toml  LICENSE  README.md
src/: detect.rs  main.rs  pipeline.rs
src/converters/: csv_md.rs  html_txt.rs  json_csv.rs  json_md.rs  md_html.rs  mod.rs  pdf.rs  txt_md.rs  util.rs  xlsx.rs
