[package]
name = "morphkit"
version = "0.1.0"
edition = "2021"
description = "Universal file converter — zero bullshit setup"

[[bin]]
name = "morphkit"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
csv = "1"
pulldown-cmark = "0.11"
indicatif = "0.17"
